# ether

./: .gitignore  2_16_grid_layout_option_bank_step_row_control_spec_v_1.md  32b_test_response.txt  960x320_PLUS_2x16_IMPLEMENTATION_ROADMAP.md  ARCHITECTURAL_REVIEW.md  ARCHITECTURE_GUIDANCE.md  ARCHITECTURE_REFACTOR_PLAN.md  BENCHMARK_SPECIFICATION.md  CMakeLists.txt  CODE_DEDUPLICATION_REPORT.md  CODE_REVIEW_TEMPLATE.md  COMPLETED_WORK_AUDIT.md  COMPREHENSIVE_IMPLEMENTATION_ROADMAP.md  COMPREHENSIVE_IMPLEMENTATION_ROADMAP_UPDATED.md  COMPREHENSIVE_TODO_LIST.md  COMPREHENSIVE_USAGE_ANALYSIS.md  DC_BLOCKING_IMPLEMENTATION.md  DEPRECATIONS.md  DEVELOPMENT_SETUP_GUIDE.md  DIRECTORY_STRUCTURE.md  ENGINE_CATALOG.md  ENGINE_IMPLEMENTATION_STATUS.md  ENGINE_NAMING_TAXONOMY.md  ENHANCED_CHORD_REQUIREMENTS.md  ENHANCED_GLOBAL_LFO_SPEC.md  ENHANCED_GRANULAR_ENGINE_SPEC.md  ETHERSYNTH_DATA_ARCHITECTURE.md  ETHERSYNTH_SCREEN_ARCHITECTURE_v4_FINAL.md  EtherSynth-Bridging-Header.h  EtherSynthBridge.cpp  EtherSynthBridge.h  FIX_NOTES_grid_sequencer_advanced.md  FX_TESTS.md  GLOBAL_LFO_IMPLEMENTATION_SPEC.md  GRANULAR_ENGINE_SPEC.md  GRANULAR_FX_SPECIFICATION.md  GRID_SEQUENCER.md  GRID_SEQUENCER_KEYMAP.md  HARDWARE_SPECIFICATIONS.md  IMPLEMENTATION_ROADMAP.md  (+231 more)
.build/: build.db  debug.yaml  plugin-tools.yaml
EtherSynth/: 960x320_IMPLEMENTATION_BACKUP.md  960x320_OUTSTANDING_WORK.md  COMPREHENSIVE_TODO.md  EtherSynth-Bridging-Header.h  EtherSynth.entitlements  EtherSynth.swift  EtherSynthApp  EtherSynthBridge.cpp  SynthController.swift.old
EtherSynth.xcodeproj/: complete_bridge.cpp  fix_xcode_build.sh  minimal_bridge.cpp  project.pbxproj
GUI/: Updated UI.txt  index (3).html
GUI/icons_full_bundle/: MANIFEST.txt
Sources/EtherSynth/: AudioEngineConnector.swift  EngineAssignmentOverlay.swift  EtherSynth.swift  EtherSynthApp.swift  EtherSynthHardware.swift  EtherSynthMainView.swift  LoopBrowser.swift  MixPage.swift  ModPage.swift  OverlayViews.swift  PatternOverlay.swift  PatternScreenView.swift  RealDataModels.swift  SamplerKitUI.swift  SamplerSlicerUI.swift  ScatterBrowser.swift  ScreenViews.swift  SimpleScreenViews.swift  SimpleSynthController.swift  SoundOverlay.swift  SynthController.swift  SynthControllerExtensions.swift  TimelineView.swift
Sources/MockEtherBridge/: MockEtherBridge.c
TestApp/: Package.swift
UI inspiration/: computer-90s-ui-retro-80s-90s-style-gui-panels-with-buttons-frames-application_461812-2353.jpg.avif
archive/old_versions/: EtherSynth.swift  EtherSynth_Complete.swift
groovebox_icons_familyA_thin_all_v1/: groovebox_icons_familyA_thin_manifest_v1.csv
light_refactor/: AppContext.h  EngineBridge.h  GridLEDManager.h  ParameterCache.h  README.md
llm_created_since_plan_archive/: README.txt  created_since_plan.list  modified_since_plan.list
scripts/: BuildGridAdvanced.command  RunGridAdvanced.command  build_grid_advanced.sh  claude_tasks.sh
src/: build_test  build_test.cpp  main.cpp  test_auto_sample_loader  test_auto_sample_loader.cpp  test_dc_blocking  test_dc_blocking.cpp  test_engine_crossfader  test_engine_crossfader.cpp  test_exponential_mapper  test_exponential_mapper.cpp  test_lufs_normalizer  test_lufs_normalizer.cpp  test_mono_low  test_mono_low.cpp  test_pattern_selection  test_pattern_selection.cpp  test_realtime_bouncer  test_realtime_bouncer.cpp  test_relative_velocity  test_relative_velocity.cpp  test_resonance_autoride  test_resonance_autoride.cpp  test_selection_visualizer  test_selection_visualizer.cpp  test_sequencer_step  test_sequencer_step.cpp  test_tape_squashing_ui  test_tape_squashing_ui.cpp  test_velocity_capture  test_velocity_capture.cpp  test_velocity_depth  test_velocity_depth.cpp  test_velocity_latch  test_velocity_latch.cpp  test_velocity_scaling  test_velocity_scaling.cpp  test_velocity_volume  test_velocity_volume.cpp
src/analysis/: LoudnessMonitor.cpp  LoudnessMonitor.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
src/audio/: ADSREnvelope.h  AdvancedParameterSmoother.cpp  AdvancedParameterSmoother.h  AudioCaptureSystem.h  AudioEngine.cpp  AudioEngine.h  DCBlocker.cpp  DCBlocker.h  EngineCrossfader.cpp  EngineCrossfader.h  ExponentialMapper.cpp  ExponentialMapper.h  FMAntiClick.cpp  FMAntiClick.h  FMOperator.cpp  FMOperator.h  FileHandle.h  LUFSNormalizer.cpp  LUFSNormalizer.h  MonoLowProcessor.cpp  MonoLowProcessor.h  OversamplingProcessor.cpp  OversamplingProcessor.h  ParameterSmoother.h  PostNonlinearProcessor.cpp  PostNonlinearProcessor.h  RealtimeAudioBouncer.cpp  RealtimeAudioBouncer.h  ResonanceAutoRide.cpp  ResonanceAutoRide.h  RingModulator.cpp  RingModulator.h  SIMDOptimizations.h  StateVariableFilter.cpp  StateVariableFilter.h  SubsonicFilter.cpp  SubsonicFilter.h  VirtualAnalogOscillator.h  VoiceManager.cpp  VoiceManager.h  (+1 more)
src/automation/: AdaptiveAutomation.cpp  AdaptiveAutomation.h
src/chords/: EnhancedChordSystem.cpp  (+1 more)
tools/: bench_audio.cpp
(+602 files in other folders)
